se termina de pasar todo el css a scss

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     </section>
     <footer>
         <div class="container__redes">
-            <a href="https://www.instagram.com" target="_blank"><img class="instagram" src="./images/instagramLogo3.png" alt="Instagram Logo"></a>
-            <a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./images/facebookLogo.jpg" alt="Facebook Logo"></a>
-            <a href="https://web.whatsapp.com/" target="_blank"><img class="whatsapp" src="./images/whatsappLogo.png" alt="Whatsapp Logo"></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener"><img class="instagram" src="./images/instagramLogo3.png" alt="Instagram Logo"></a>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener"><img class="facebook" src="./images/facebookLogo.jpg" alt="Facebook Logo"></a>
+            <a href="https://web.whatsapp.com/" target="_blank" rel="noopener"><img class="whatsapp" src="./images/whatsappLogo.png" alt="Whatsapp Logo"></a>
         </div>
         <div class="container__contacto--footer">
             <p>Caba</p>
